--- a/force-app/main/default/classes/Sch_Supporters_Scheduler.cls
+++ b/force-app/main/default/classes/Sch_Supporters_Scheduler.cls
@@ -1,6 +1,6 @@
 global class Sch_Supporters_Scheduler implements Schedulable{
     global void execute(SchedulableContext sc){       
-          System.enqueueJob(new Q_SupportersQueueable(1,50,false));
+          System.enqueueJob(new ContactQueueable(1,50,false));
     }
     
 }
